examples/cert-manager-certificates.yaml
---
# Ingress using cert-manager managed certificate
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
  - hosts:
    - docs.local
    secretName: docs-tls
  rules:
  - host: docs.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-server
            port:
              number: 8080
---
# Ingress using cert-manager managed certificate
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
  - hosts:
    - admin.local
    secretName: admin-tls
  rules:
  - host: admin.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-server
            port:
              number: 8080
